# buildr

./: QUICK_START.md  README.md  SETUP_GUIDE.md  setup.sh  start-all.sh
client/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  prettier.config.mjs
client/public/yolo-model/: metadata.yaml
client/src/agent/: agent.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/hooks/: use-yolo-inference.ts
client/src/lib/: yolo-renderer.ts  yolo.ts
scraper/pcpartpicker/api/: .env.example  json_to_sqlite.py  main.py  models.py  pcpartpicker.db  pyproject.toml
scraper/pcpartpicker/rag-api/: .env.example  cpu_knowledge_base.json  main.py  process_data.py  pyproject.toml
scraper/pcpartpicker/scraper/: .env.example  add_cpu_sockets(slow).py  (+3 more)
scraper/pcvideoscrapper/: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt  schemas.py  step_extractor.py  twelve_labs_client.py  video_metadata_extractor.py
scraper/pcvideoscrapper/clips-api/: main.py  pyproject.toml
scraper/pcvideoscrapper/outputs/: processed_QXjTKVv_1OU.json  processed_UTKxMAnFHnw.json  processed_v3J9VtWMEE8.json
scraper/pcvideoscrapper/scraper/: .gitignore  api.py  filter_results.py  schemas.py  simple_process.py  step_extractor.py  video_metadata_extractor.py
scraper/pcvideoscrapper/scraper/outputs/: processed_UTKxMAnFHnw.json  processed_d9BWuNHYdbU.json  processed_v3J9VtWMEE8.json
server/: classes.txt  main.py  pyproject.toml
test/: main.py
tests/: test2.py  train2.py  transform_2.py  webrtc_server2.py
yolo-model/: model.json
(+60 files in other folders)
