[project]
name = "webrtc-yolo-server"
version = "0.1.0"
description = "WebRTC server for YOLO-based PC component segmentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "aiortc>=1.9.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "av>=12.0.0",
    "aiohttp-cors>=0.7.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.2.0"]

[project.scripts]
webrtc-server = "main:main"

[tool.uv]
dev-dependencies = []

