[project]
name = "pcpartpicker-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "google-genai>=1.57.0",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
